# apresentacao_IABrasil

./: .env.exemplo  .gitignore  Dockerfile  Dockerfile.dashboard  Dockerfile.fastapi  Dockerfile.streamlit  README.md  analysis.py  api.py  app.py  app_02.py  app_03.py  app_old.py  dashboard_mensagens.py  dashboard_n8n.py  database.py  db_funcs.py  docker-compose.yml  fix_compatibility.py  hello.py  nginx.conf  pyproject.toml  requirements.txt  shared_state.py  test.py  test_postgres.py
OLD/: app_01_old.py  docker-compose.yml  requirements_old.txt
Prompts/: Operadora_tv.txt  assistencia_tecnica.txt
app/: app_02.py  feeling_app.yaml
